files moved and added to Flask

--- a/FlaskApp/FlaskApp/templates/index3.html
+++ b/FlaskApp/FlaskApp/templates/index3.html
@@ -21,11 +21,11 @@
     </div>
     <div class="row">
       <div class="col-md-2" >
-        <div class="well" style="width: 265px;background-color: #f29f96;">
+        <div class="well" style="width: 265px;background-color: #f29f96;float: left;margin-left: 20px;">
           <h5>Date Selection:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
-        <div class="panel panel-primary" style="width: 265px;background-color: #f29f96;">
+        <div class="panel panel-primary" style="width: 265px;background-color: #f29f96;margin-left: 20px;">
           <div class="panel-heading" style="background-color: #c94738;color: #121110;">
             <h3 class="panel-title"><Details></Details></h3>
           </div>
