--- a/FlaskApp/FlaskApp/templates/linechart.html
+++ b/FlaskApp/FlaskApp/templates/linechart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Line chart</title>
+    <title>Satellite Data</title>
   </head>
   <style>
    .mainBox{
@@ -16,9 +16,27 @@
   </style>
   
   <body>
-    <h1>Line chart</h1>
-    <div class="mainBox">
+    <h1>Australian Bushfires 2019 - Satellite Data</h1>
+    <div class="col-md-5" style="width: 1500px;height: 850px;margin-left: 100px;">
       <canvas id="myChart"></canvas>
+    </div>
+    <div class="panel panel-primary" style="width: 500px;right: 10px;position: absolute;top: 100px;">
+      <div class="panel-heading">
+        <h3 class="panel-title">Explanations of Data Points</h3>
+        <p>Scan:</p>
+        <p>Explanation for Scan</p>
+        <p>Track:</p>
+        <p>Explanation for Track</p>
+        <p>Type:</p>
+        <p>Explanation for Type</p>
+        <p>Bright_ti4:</p>
+        <p>Explanation for Bright_ti4</p>
+        <p>Bright_ti5:</p>
+        <p>Explanation for Bright_ti5</p>
+        <p>Frp:</p>
+        <p>Explanation for Frp</p>
+      </div>
+      <div id= class="panel-body"></div>
     </div>
   </body>
   <script src="https://cdn.bootcss.com/d3/5.9.2/d3.min.js"></script>
