--- a/FlaskApp/FlaskApp/templates/index3.html
+++ b/FlaskApp/FlaskApp/templates/index3.html
@@ -7,44 +7,43 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Australian Bushfires 2019</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Chart.js -->
   <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.0/chart.umd.js"></script>
+  <!-- Our CSS -->
+  <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 
 <body>
-
-  <div style="background-color: bisque;">
+  <div>
     <div class="row">
-      <div class="col-md-12 jumbotron text-center" style="background-color: #c94738;color: #524645;">
+      <div class="col-md-12 jumbotron text-center">
         <h1>Australian Bushfires 2019</h1>
         <p>Data from NASA Satellites</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-2" >
-        <div class="well" style="width: 300px;background-color: #f29f96;float: left;margin-left: 20px;">
+        <div class="well">
           <h5>Date Selection:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
-        <div class="panel panel-primary" style="width: 300px;background-color: #f29f96;margin-left: 20px;">
-          <div class="panel-heading" style="background-color: #c94738;color: #121110;">
+        <div class="panel panel-primary">
+          <div class="panel-heading" style="background-color: #c94738; color: #121110;">
             <h3 class="panel-title"><Details></Details></h3>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5" style="width: 1500px;position: relative;left: 100px">
-        <div id="plot" ></div>
-      </div>
       <div class="col-md-5">
-        <div id="another one for here"></div>
-      </div>
-      <div class="col-md-12" style="position:center; left: 100px">
-        <div id="another chart here"></div>
+        <div id="plot" ></div>
       </div>
     </div>
   </div>
+  <!-- D3 JavaScript -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <!-- Plotly JavaScript -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!-- Our JavaScript -->
   <script src="/static/js/demo.js"></script>
 </body>
 
