--- a/FlaskApp/FlaskApp/templates/linechart.html
+++ b/FlaskApp/FlaskApp/templates/linechart.html
@@ -22,19 +22,27 @@
     </div>
     <div class="panel panel-primary" style="width: 500px;right: 10px;position: absolute;top: 100px;">
       <div class="panel-heading">
-        <h3 class="panel-title">Explanations of Data Points</h3>
-        <p>Scan:</p>
-        <p>Explanation for Scan</p>
-        <p>Track:</p>
-        <p>Explanation for Track</p>
-        <p>Type:</p>
-        <p>Explanation for Type</p>
-        <p>Bright_ti4:</p>
-        <p>Explanation for Bright_ti4</p>
-        <p>Bright_ti5:</p>
-        <p>Explanation for Bright_ti5</p>
-        <p>Frp:</p>
-        <p>Explanation for Frp</p>
+        <h2>Explanations of Data Points</h2>
+        <h3>SCAN:</h3>
+        <p>Fire pixels relate to 1km, but satellite pixels</p>
+        <p>get bigger at the edge of the scan.</p>
+        <p>Scan is a reflection of the actual pixel size.</p>
+        <h3>TRACK:</h3>
+        <p>As with Scan, Track shows the actual pixel size.</p>
+        <h3>TYPE:</h3>
+        <p>0 = Presumed Vegetation Fire</p>
+        <p>2 = Presumed Fire over other static land</p>
+        <p>3 = Presumed Offshore Fire</p>
+        <h3>BRIGHT TI4:</h3>
+        <p>Brightness temperature taken channel:  </p>
+        <p>MODIS (Moderate Resolution Imaging Spectroradiometer) channels 21/22</p>
+        <p>VIIRS (Visible Infrared Imaging Radiometer Suite) channel 4</p>
+        <h3>BRIGHT TI5:</h3>
+        <p>Brightness temperature taken from channel:  </p>
+        <p>MODIS (Moderate Resolution Imaging Spectroradiometer) channel 31</p>
+        <p>VIIRS (Visible Infrared Imaging Radiometer Suite) channel 5</p>
+        <h3>FRP:</h3>
+        <p>Fire Radiative Power measured in MW (megawatts)</p>
       </div>
       <div id= class="panel-body"></div>
     </div>
