Add PwrPt and correct HTML spelling error

--- a/FlaskApp/FlaskApp/templates/linechart.html
+++ b/FlaskApp/FlaskApp/templates/linechart.html
@@ -34,7 +34,7 @@
         <p>2 = Presumed Fire over other static land</p>
         <p>3 = Presumed Offshore Fire</p>
         <h3>BRIGHT TI4:</h3>
-        <p>Brightness temperature taken channel:  </p>
+        <p>Brightness temperature taken from channel:  </p>
         <p>MODIS (Moderate Resolution Imaging Spectroradiometer) channels 21/22</p>
         <p>VIIRS (Visible Infrared Imaging Radiometer Suite) channel 4</p>
         <h3>BRIGHT TI5:</h3>
